--- a/src/navegacion.css
+++ b/src/navegacion.css
@@ -1,7 +1,7 @@
 html,
 body {
   color: #21232a;
-  background-color: white;
+  background-color: #f2e5e3;
   font-family: "Nimbus Sans", Commissioner, monospace;
   font-size: 1.3rem;
   margin: 0;
@@ -14,4 +14,8 @@ body {
 }
 .card-footer {
   background-color: rgb(144, 185, 201);
+}
+.card{
+  border-decoration: none;
+  background-color: #f2e5e3;
 }
