login añadido y solucion de problemas

--- a/src/listaPartidos.css
+++ b/src/listaPartidos.css
@@ -1,61 +1,65 @@
 button.delete {
-    width: 170px;
-    height: 50px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    background: red;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 1px 1px 3px rgba(0,0,0,0.15);
-    background: #e62222;
-   }
-   
-   button.delete, button.delete span {
-    transition: 200ms;
-   }
-   
-   button.delete .text {
-    transform: translateX(15px);
-    color: white;
-    font-weight: bold;
-   }
-   
-   button.delete .icon {
-    position: absolute;
-    border-left: 1px solid #c41b1b;
-    transform: translateX(110px);
-    height: 40px;
-    width: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-   }
-   
-   button.delete svg {
-    width: 15px;
-    fill: #eee;
-   }
-   
-   button.delete:hover {
-    background: #ff3636;
-   }
-   
-   button.delete:hover .text {
-    color: transparent;
-   }
-   
-   button.delete:hover .icon {
-    width: 150px;
-    border-left: none;
-    transform: translateX(0);
-   }
-   
-   button.delete:focus {
-    outline: none;
-   }
-   
-   button.delete:active .icon svg {
-    transform: scale(0.8);
-   }
-   
+  width: 170px;
+  height: 50px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  background: red;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.15);
+  background: #e62222;
+}
+
+button.delete,
+button.delete span {
+  transition: 200ms;
+}
+
+button.delete .text {
+  transform: translateX(15px);
+  color: white;
+  font-weight: bold;
+}
+
+button.delete .icon {
+  position: absolute;
+  border-left: 1px solid #c41b1b;
+  transform: translateX(110px);
+  height: 40px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button.delete svg {
+  width: 15px;
+  fill: #eee;
+}
+
+button.delete:hover {
+  background: #ff3636;
+}
+
+button.delete:hover .text {
+  color: transparent;
+}
+
+button.delete:hover .icon {
+  width: 150px;
+  border-left: none;
+  transform: translateX(0);
+}
+
+button.delete:focus {
+  outline: none;
+}
+
+button.delete:active .icon svg {
+  transform: scale(0.8);
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
