maquetacion fondo y main

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 html,
 body {
   color: #21232a;
-  background-color: white;
+  background-color: #FDF5ED !important;
   font-family: "Courier New", Courier, monospace;
   font-size: 1.3rem;
   margin: 0;
