--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -1,8 +1,8 @@
-.titulo{
-    text-size:50px;
-
-}
-#captcha{
+#medio{
     margin-left:44%;
+    margin-top:1%
+}
+#medio1{
+    margin-left:39%;
     margin-top:1%
 }
