--- a/src/addPartidos.css
+++ b/src/addPartidos.css
@@ -1,39 +1,10 @@
-.anadir {
-  background: white;
-  border: 0;
-  border-radius: 2px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-}
 .noborde{
     border:0;
 }
-.anadir:hover{
-    background:#F7F7F7;
-}
-/* The alert message box */
 .alert {
   padding: 20px;
-  background-color: #f4c836; /* Red */
+  background-color: #f4c836; 
   color: black;
   margin-bottom: 15px;
-}
-
-/* The close button */
-.closebtn {
-  margin-left: 15px;
-  color: white;
-  font-weight: bold;
-  float: right;
-  font-size: 22px;
-  line-height: 20px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-/* When moving the mouse over the close button */
-.closebtn:hover {
-  color: black;
 }
 
