--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;900&display=swap');
 
-
-
-
-
 .form-holder {
       display: flex;
       flex-direction: column;
@@ -15,10 +11,6 @@
 .form-holder .form-content {
     position: relative;
     text-align: center;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
     display: flex;
     -webkit-justify-content: center;
     justify-content: center;
@@ -63,10 +55,6 @@
 }
 
 
-.form-content label, .was-validated .form-check-input:invalid~.form-check-label, .was-validated .form-check-input:valid~.form-check-label{
-    color: black;
-}
-
 .form-content input[type=text], .form-content input[type=password], .form-content input[type=email], .form-content select {
     width: 100%;
     padding: 9px 20px;
@@ -91,20 +79,13 @@
      box-shadow: none;
 }
 
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active{
-    background-color: #495056;
-    outline: none !important;
-    border: none !important;
-     box-shadow: none;
-}
-
 .form-content textarea {
     position: static !important;
     width: 100%;
     padding: 8px 20px;
     border-radius: 6px;
     text-align: left;
-    background-color: black;
+    background-color: #fff;
     border: 0;
     font-size: 15px;
     font-weight: 300;
@@ -119,19 +100,6 @@
 
 .form-content textarea:hover, .form-content textarea:focus {
     border: 0;
-    background-color: #ebeff8;
+    background-color: #fff;
     color: #8D8D8D;
-}
-
-.mv-up{
-    margin-top: -9px !important;
-    margin-bottom: 8px !important;
-}
-
-.invalid-feedback{
-    color: #ff606e;
-}
-
-.valid-feedback{
-   color: #2acc80;
 }
